--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,26 +1,21 @@
 ---
-import { type CollectionEntry, getCollection } from 'astro:content';
+import { type CollectionEntry, getCollection, render } from 'astro:content';
 import BlogPost from '../../layouts/BlogPost.astro';
-import LikeCounter from '@components/likes/LikeCounter.vue';
-import { render } from 'astro:content';
-import type { GetStaticPaths } from 'astro';
+import LikeCounterAction from '@components/likes/LikeCounterAction.vue';
+// import LikeCounter from '@components/likes/LikeCounter.vue';
+ 
 
 export const prerender = true;
 
-export const getStaticPaths = (async () => {
-  const blogPosts = await getCollection('blog');
-
-  return blogPosts.map((post) => ({
+export async function getStaticPaths() {
+  const posts = await getCollection('blog');
+  return posts.map((post) => ({
     params: { slug: post.id },
     props: { post },
   }));
-}) satisfies GetStaticPaths;
-
-interface Props {
-  post: CollectionEntry<'blog'>;
 }
-
-const { post } = Astro.props;
+type Props = { post: CollectionEntry<'blog'> };
+const { post } = Astro.props as Props;
 const { Content } = await render(post);
 ---
 
@@ -30,7 +25,8 @@ const { Content } = await render(post);
       height: '50px',
     }}
   >
-    <LikeCounter postId={post.id} client:only="vue" />
+    <!-- <LikeCounter postId={post.id} client:only="vue" /> -->
+    <LikeCounterAction postId={post.id} client:only="vue" />
   </div>
 
   <Content />
