--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,21 +1,28 @@
 ---
-import { type CollectionEntry, getCollection, render } from 'astro:content';
+import { type CollectionEntry, getCollection } from 'astro:content';
 import BlogPost from '../../layouts/BlogPost.astro';
-import LikeCounterAction from '@components/likes/LikeCounterAction.vue';
+
 // import LikeCounter from '@components/likes/LikeCounter.vue';
- 
+import LikeCounterAction from '@components/likes/LikeCounterAction.vue';
+import { render } from 'astro:content';
+import type { GetStaticPaths } from 'astro';
 
 export const prerender = true;
 
-export async function getStaticPaths() {
-  const posts = await getCollection('blog');
-  return posts.map((post) => ({
+export const getStaticPaths = (async () => {
+  const blogPosts = await getCollection('blog');
+
+  return blogPosts.map((post) => ({
     params: { slug: post.id },
     props: { post },
   }));
+}) satisfies GetStaticPaths;
+
+interface Props {
+  post: CollectionEntry<'blog'>;
 }
-type Props = { post: CollectionEntry<'blog'> };
-const { post } = Astro.props as Props;
+
+const { post } = Astro.props;
 const { Content } = await render(post);
 ---
 
@@ -30,4 +37,5 @@ const { Content } = await render(post);
   </div>
 
   <Content />
+</BlogPost>ent />
 </BlogPost>
